Fixed css trouble displaying on small screen

--- a/animations.css
+++ b/animations.css
@@ -1,6 +1,6 @@
 #roundChoices .choices:hover{
-    height: 18vh;
-    width: 16vh;
-    margin: 2.5vh;
-    font-size: 12vh;
+    height: 12vmax;
+    width: 10vmax;
+    margin: 0 2vmax;
+    font-size: 6vmax;
 }
